fix(next-web): dark mode login page ux

--- a/applications/next-web/src/app/globals.css
+++ b/applications/next-web/src/app/globals.css
@@ -6,6 +6,7 @@
   --color-background: var(--color-neutral-50);
   --color-surface-elevated: var(--color-white);
 
+  --color-foreground: var(--color-neutral-900);
   --color-foreground-secondary: var(--color-neutral-600);
   --color-foreground-subtle: var(--color-neutral-400);
 
@@ -13,8 +14,6 @@
   --color-border-emphasis: var(--color-blue-500);
 
   --color-primary: var(--color-neutral-950);
-  --color-primary-hover: var(--color-neutral-800);
-  --color-primary-active: var(--color-neutral-900);
   --color-primary-foreground: var(--color-white);
 
   --color-link: var(--color-blue-600);
@@ -26,15 +25,14 @@
     --color-background: var(--color-neutral-950);
     --color-surface-elevated: var(--color-neutral-900);
 
+    --color-foreground: var(--color-neutral-50);
     --color-foreground-secondary: var(--color-neutral-300);
     --color-foreground-subtle: var(--color-neutral-500);
 
     --color-border: var(--color-neutral-800);
     --color-border-emphasis: var(--color-neutral-500);
 
-    --color-primary: var(--color-neutral-50);
-    --color-primary-hover: var(--color-neutral-200);
-    --color-primary-active: var(--color-neutral-100);
+    --color-primary: var(--color-neutral-200);
     --color-primary-foreground: var(--color-neutral-900);
 
     --color-link: var(--color-blue-400);
